2002-10-25  Darin Adler  <darin@apple.com>

	- fixed 3038011 -- drop-down menu hierarchy broken at yahoo new acct page

        * kjs/array_object.cpp: (ArrayProtoFuncImp::call):
	Fix bug calling concat on an empty array. The old code tried to
	optimize in a way that would prevent appending any arrays until
	at least one element was in the destination array. So if you were
	concatenating a non-empty array into an empty array, you got an empty array.

=== Alexander-29 ===

=== Alexander-28 ===

2002-10-10  Darin Adler  <darin@apple.com>

	- fixed 3072643 -- infinite loop in JavaScript code at walgreens.com

	The problem is that "xxx".indexOf("", 1) needs to return 1, but we
	were returning 0.

        * kjs/ustring.cpp:
        (UString::find): Return pos, not 0, when the search string is empty.
        (UString::rfind): Make sure that pos is not past the end of the string,
	taking into account the search string; fixes a potential read off the end
	of the buffer. Also return pos, not 0, when the search string is empty.

=== Alexander-27 ===

2002-10-07  Darin Adler  <darin@apple.com>

	Fixed absurdly high memory usage when looking at pages that use a lot of JavaScript.

        * kjs/collector.cpp:
        (Collector::allocate): Implement a new policy of doing a garbage collect every 1000
	allocations. The old policy was both complicated and misguided.
        (Collector::collect): Zero out the "number of allocations since last collect".

2002-10-06  Darin Adler  <darin@apple.com>

	I noticed some broken lists at mapblast.com and tracked it down to this.

        * kjs/array_object.cpp:
        (ArrayInstanceImp::put): Don't truncate the list; only extend the length if
	it's not already long enough.
        (ArrayProtoFuncImp::call): Fix some ifdef'd code so it compiles if you turn
	the ifdefs on.

2002-10-04  Darin Adler  <darin@apple.com>

        Fixed problems parsing numbers that are larger than a long with parseInt.
