@@ -111,8 +111,7 @@
 /* default values for bison */
 #define YYDEBUG 0
 #define YYMAXDEPTH 0
-#ifdef APPLE_CHANGES
-#else
+#if !APPLE_CHANGES
 #define YYERROR_VERBOSE
 #endif
 #define DBG(l, s, e) { l->setLoc(s.first_line, e.last_line, Parser::sid); } // location
